--- a/gb/20/11/26/n12577054.md
+++ b/gb/20/11/26/n12577054.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/owduqo3825/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/owduqo3825/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/owduqo3825/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/owduqo3825/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/owduqo3825/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/owduqo3825/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/owduqo3825/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/owduqo3825/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳洲议员谴责中共对法轮功的迫害</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-22-minghui-falun-gong-au-02-600x400.jpg" />
 <h6></h6>
@@ -20,18 +20,18 @@
 <p>“多年来，我也和法轮功学员及其相关的支持者有过很多交往，他们都是好人。”</p>
 <p>“他们是非常善良的人。他们不应该受到迫害，他们不应该遭受到北京那些暴徒的对待，而这就是不争的事实。”</p>
 <p>“世界上很少有像中共这样的政府卑鄙地迫害人权。”</p>
-<figure id="attachment_12577090" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-22-minghui-falun-gong-au-01.jpg"><img class="size-large wp-image-12577090" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-22-minghui-falun-gong-au-01-600x420.jpg" alt="" width="600" b="420" /></a><figcaption class="wp-caption-text">2020年11月11日，澳大利亚维州立法会议员菲恩先生（Bernie Finn）在议会发言时称：“世界上很少有像中共这样的政府卑鄙地迫害人权”。（明慧网）</figcaption></figure>
+<figure id="attachment_12577090" aria-describedby="caption-attachment-12577090" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-22-minghui-falun-gong-au-01.jpg"><img class="size-large wp-image-12577090" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-22-minghui-falun-gong-au-01-600x420.jpg" alt="" width="600" b="420" /></a><figcaption id="caption-attachment-12577090" class="wp-caption-text">2020年11月11日，澳大利亚维州立法会议员菲恩先生（Bernie Finn）在议会发言时称：“世界上很少有像中共这样的政府卑鄙地迫害人权”。（明慧网）</figcaption></figure>
 <p>他说：“中共政府不仅是澳洲的敌人，也是其本国人民和任何人的敌人。（中共）不容任何人提出任何形式的批评。”“有很多很多人被关押在监狱、劳改营；有很多很多人在半夜被带走，从此再也没有人见过他们；有很多很多人被谋杀了。”</p>
-<p>多年来，菲恩一直<ahref="https://github.com/owduqo3825/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">支持法轮功</a>学员和平反迫害的行动，并在议会中为此发声。</p>
+<p>多年来，菲恩一直<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">支持法轮功</a>学员和平反迫害的行动，并在议会中为此发声。</p>
 <p>2020年2月，他在议会中呼吁维州政府关注中共强行摘取人体器官的暴行，抵制其衍生出的器官非法交易和器官移植旅游。他表示，英国“独立人民法庭”最新发布的调查结果更有力地证实了中共罪行证据确凿，呼吁澳洲政府采取行动，“制止这一卑鄙和令人憎恨的行径”。</p>
 <p>2019年6月17日，位于伦敦的独立人民法庭在最终判决中表示：可以确定的是，法轮功学员是（中共）活摘罪行的器官来源，他们很可能是主要的器官来源。</p>
-<figure id="attachment_12577332" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/1605090707142759.jpg"><img class="size-large wp-image-12577332" src="https://i.epochtimes.com/assets/uploads/2020/11/1605090707142759-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2016年5月7日，墨尔本法轮功学员在城市广场举行“世界法轮大法日”庆典，议员菲恩（Bernie Finn）到场发言祝贺。（Lucy／大纪元）</figcaption></figure>
+<figure id="attachment_12577332" aria-describedby="caption-attachment-12577332" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/1605090707142759.jpg"><img class="size-large wp-image-12577332" src="https://i.epochtimes.com/assets/uploads/2020/11/1605090707142759-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12577332" class="wp-caption-text">2016年5月7日，墨尔本法轮功学员在城市广场举行“世界法轮大法日”庆典，议员菲恩（Bernie Finn）到场发言祝贺。（Lucy／大纪元）</figcaption></figure>
 <p>近日，面对中共的贸易制裁，在这次维多利亚州议会会议上，菲恩表示澳洲不能依赖中共。“我不希望我的子孙以任何方式、形态被中共控制，这让我深切地担忧。”“我不希望我们的未来被中共拥有”，“这不是我们的选择”。</p>
 <p>自今年5月以来中共实施了一系列针对澳洲产品的贸易禁令。澳大利亚是被中共严重渗透的西方国家之一，也是最早意识到中共企图的西方国家之一，率先在2018年禁止华为参与5G建设。在受到中共病毒（武汉肺炎）疫情重创之后，澳洲在国际上率先提出对疫情来源做独立调查，因此引发中共报复。</p>
-<p>近几个月，随着澳洲<ahref="https://github.com/owduqo3825/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%85%B1.md#1">谴责中共</a>在香港、新疆迫害人权，以及立法抵制外国干涉，包括有望取消“一带一路”合约等方面的举措，中共在经济上采取的报复不断升级，试图通过施压，迫使澳洲在关键问题上做出让步。</p>
+<p>近几个月，随着澳洲<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%85%B1.md#1">谴责中共</a>在香港、新疆迫害人权，以及立法抵制外国干涉，包括有望取消“一带一路”合约等方面的举措，中共在经济上采取的报复不断升级，试图通过施压，迫使澳洲在关键问题上做出让步。</p>
 <p>基于中共人权纪录劣迹斑斑，今年9月，逾160个人权组织曾致信国际奥委会（IOC）主席呼吁抵制2022年北京冬奥会，要求重新为冬奥会选址。近日，几位澳洲联邦议员加入了呼吁澳洲抵制参加此次冬奥会的行列。</p>
 <p>澳洲联邦参议员阿贝茨（Eric Abetz）在11月16日对媒体表示：“1936年（柏林）奥运会和即将到来的2022年（北京）冬奥会有太大的相似之处。人们对德国重建经济非常高兴，结果对‘被指称的’集中营和迫害视而不见。”</p>
-<figure id="attachment_12577253" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/2020-1-16-australia-oh-petition-interview_01.png"><img class=" wp-image-12577253" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-1-16-australia-oh-petition-interview_01-600x603.png" alt="" width="450" b="452" /></a><figcaption class="wp-caption-text">阿贝茨先生（Eric Abetz）在其位于塔斯曼尼亚州首府霍巴特市中心的办公室和法轮功学员合影。（明慧网）</figcaption></figure>
+<figure id="attachment_12577253" aria-describedby="caption-attachment-12577253" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/2020-1-16-australia-oh-petition-interview_01.png"><img class=" wp-image-12577253" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-1-16-australia-oh-petition-interview_01-600x603.png" alt="" width="450" b="452" /></a><figcaption id="caption-attachment-12577253" class="wp-caption-text">阿贝茨先生（Eric Abetz）在其位于塔斯曼尼亚州首府霍巴特市中心的办公室和法轮功学员合影。（明慧网）</figcaption></figure>
 <p>2019年9月16日，作为澳洲联邦参议院外交事务委员会主席的阿贝茨在接受澳洲法轮功学员为制止中共活摘器官的暴行十年来（2009年开始）征集的二十五万多的签名时，赞赏法轮功学员坚持不懈的努力。</p>
 <p>“我们需要了解真相、制止迫害，一旦活摘器官的真相被完全揭示出来，人们会看到，中共对良心犯的迫害没有一点人性的良善。”</p>
 <p>2016年11月24日，阿贝茨与澳洲联邦参议员莱斯（Janet Rice）发起限制不正当器官移植的动议案，在无一反对的情况下在参议院获得通过。</p>
@@ -41,42 +41,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/14/7/6/n4194038.md#1">悉尼“三退”集会 议员揭中领馆恐吓</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/9/19/n10724764.md#1">加律师麦塔斯与美博士在澳吁制止中共活摘</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/19/7/19/n11395732.md#1">澳政要及主流人士声援法轮功反迫害20年</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/7/17/n12263043.md#1">法轮功反迫害21周年 悉尼各界声援</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/7/6/n4194038.md#1">悉尼“三退”集会 议员揭中领馆恐吓</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/9/19/n10724764.md#1">加律师麦塔斯与美博士在澳吁制止中共活摘</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/7/19/n11395732.md#1">澳政要及主流人士声援法轮功反迫害20年</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/7/17/n12263043.md#1">法轮功反迫害21周年 悉尼各界声援</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a></li><li><a href="https://github.com/owduqo3825/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/25/n12574760.md#1">专访李劼：正邪决战 美重打独立战争</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/18/n12558731.md#1">【思想领袖】爱泼斯坦：科技巨头操纵选举</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/26/n12576193.md#1">【拍案惊奇】共和党浪潮 川普曾预言国会取胜</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12570599.md#1">美总务署批准拜登过渡资源 川普：继续战斗</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12572098.md#1">【名家专栏】川普秘密会谈内容被泄露</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12572558.md#1">一文看懂 川普在6摇摆州挑战选举舞弊进展</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/23/n12570274.md#1">曾获叶德娴帮还巨债 刘德华承诺养她一辈子</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12572570.md#1">疑踩中共禁区 张艺谋《一秒钟》遭金鸡奖撤映</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12570674.md#1">被误认嚼口香糖耍大牌 范丞丞曝光真相引爆笑</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/23/n12570098.md#1">章子怡自曝减肥只喝水 体重从未超50公斤</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12572786.md#1">观金马片《夜更》洒泪 杜汶泽叹亏欠香港年轻人</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12571000.md#1">大火中救4人 俄罗斯怀孕母狗自己却被烧伤</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/18/n12557602.md#1">10秒找到东西 丰田汽车高效率 违规恐挨骂</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/25/n12574162.md#1">天外飞来的？ 美国沙漠惊现神秘金属巨柱</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12571675.md#1">解密画面：美军F-35战机试投B61-12核弹</a></li>
-<li><a href="https://github.com/owduqo3825/djy/blob/master/gb/20/11/24/n12572434.md#1">Moderna：无法证明疫苗可阻止病毒传播</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/owduqo3825/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/owduqo3825/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/26/n12577054.htm">澳洲议员谴责中共对法轮功的迫害</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/26/n12577054.htm">澳洲议员谴责中共对法轮功的迫害</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/owduqo3825/djy/blob/master/gb/20/11/26/n12577054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/owduqo3825/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/owduqo3825/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/owduqo3825/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/owduqo3825/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owduqo3825/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/20/11/26/n12577054.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
